crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_stmt_parenthesized_names.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_stmt_parenthesized_names.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..25,
        body: Suite {
            range: 0..25,
            node_index: NodeIndex(None),
            statements: [
                Import(
                    StmtImport {
                        node_index: NodeIndex(None),
                        range: 0..6,
                        names: [],
                        is_lazy: false,
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 7..10,
                        value: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 8..9,
                                id: Name("a"),
                                ctx: Load,
                            },
                        ),
                    },
                ),
                Import(
                    StmtImport {
                        node_index: NodeIndex(None),
                        range: 11..17,
                        names: [],
                        is_lazy: false,
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 18..24,
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 18..24,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 19..20,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 22..23,
                                            id: Name("b"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | import (a)
  |        ^ Syntax Error: Expected one or more symbol names after import
2 | import (a, b)
  |


  |
1 | import (a)
2 | import (a, b)
  |        ^ Syntax Error: Expected one or more symbol names after import
  |
