crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_stmt_trailing_comma.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_stmt_trailing_comma.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..22,
        body: [
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 0..8,
                    names: [],
                    is_lazy: false,
                },
            ),
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 9..21,
                    names: [
                        Alias {
                            end: 17,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("x"),
                                range: 16..17,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 20,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("y"),
                                range: 19..20,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    is_lazy: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import ,
  |        ^ Syntax Error: Expected an import name
2 | import x, y,
  |


  |
1 | import ,
  |         ^ Syntax Error: Expected one or more symbol names after import
2 | import x, y,
  |


  |
1 | import ,
2 | import x, y,
  |            ^ Syntax Error: Trailing comma not allowed
  |
